# default-minion

./: .gitmodules  Cargo.toml  Containerfile.minion  README.md
.github/workflows/: cd.yml  rust-ci.yml
apps/default-minion/: Cargo.toml
apps/default-minion/src/: container.rs  llm.rs  main.rs
apps/default-minion/src/actions/: files.rs  git.rs  markdown.rs  mod.rs
apps/default-minion/src/interaction_loop/: history.rs  resources.rs  run.rs
apps/minion/: Cargo.toml
apps/minion/src/: config.rs  llm.rs  macros.rs  main.rs  util.rs
apps/minion/src/actions/: git.rs
apps/minion/src/interaction_loop/: mod.rs
libs/devcontainer/: Cargo.toml
libs/devcontainer/src/: json.rs  lib.rs
scripts/git-hooks/: pre-commit
