[package]
name = "minion"
version = "0.1.0"
edition = "2021"

[dependencies]
# config
envy = "0.4"
url = { version = "2", features = ["serde"] }
serde = "1"
# agent interaction
git2 = { version = "0.17", default-features = false, features = ["https"] }
bollard = "0.18"
rand = "0.8"
tar = "0.4"
# LLM access
async-openai = "0.27"
reqwest = "0.12"
# data processing
regex = "1"
once_cell = "1"
serde_json = "1"
image = { version = "0.24", features = ["webp", "webp-encoder"] }
base64 = "0.21"
# backoff
backoff = { version = "0.4", features = ["tokio"] }
# error handling
thiserror = "1"
# async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# logging
log = "0.4"
env_logger = "0.11"
# workspace members
agent-api = { path = "../../framework/libs/agent-api" }
devcontainer = { path = "../../libs/devcontainer" }
